# TSDZ2-Smart-EBike-1-Cadence-mode-upgrade-

./: .gitignore  README.md  about_punch_cadence  changelog.txt  commits.txt  compile_and_flash_20.bat  compile_and_flash_20.sh  ebike_app.c  pyproject.toml
.github/workflows/: build.yaml
experimental settings/: 20240604-094153CEST.ini  20250930-141528CEST.ini
manuals/odt/: EN-Operating_manual_of _display-TSDZ2-20.1C.6.odt  EN-Operating_manual_of_display-TSDZ2-20.1C.6-update-3.odt  EN-Operating_manual_of_display-TSDZ2-20.1C.6-update-4.odt  EN-Operating_manual_of_display-TSDZ2-20.1C.6-update.1.odt  EN-Operating_manual_of_display-TSDZ2-20.1C.6-update.2.odt  EN-Parameter_configurator_guide-TSDZ2-v20.1C.6-update-1.odt  EN-Parameter_configurator_guide-TSDZ2-v20.1C.6-update-2.odt  (+13 more)
other settings/: TSDZ8_header.ini
proven settings/: Default_Settings_36V.ini  Default_Settings_48V.ini  Default_Settings_TSDZ2_36V.ini  Default_Settings_TSDZ2_48V.ini  Default_Settings_TSDZ8.ini
src/: Makefile  adc.c  adc.h  brake.c  brake.h  clean.bat  common.c  common.h  compile.bat  config.h  ebike_app.c  ebike_app.h  eeprom.c  eeprom.h  flash.bat  interrupts.h  lights.c  lights.h  main.c  main.h  motor.c  motor.h  pas.c  pas.h  pins.h  pwm.c  pwm.h  timers.c  timers.h  torque_sensor.c  torque_sensor.h  uart.c  uart.h  wheel_speed_sensor.c  wheel_speed_sensor.h
src/common/: common.c  common.h
tests/: conftest.py  gcovr.cfg  load_c_code.py  test_diag.py  test_display.py  test_filter.py  test_map.py  test_speed_limit.py  test_wheel_speed.py
tools/: ST_Vision_Programming.stp
(+20 files in other folders)
