[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[project]
name = "TSDZ2-Smart-EBike"
version = "20.1C.6"
description = "TSDZ2 Open Source Firmware adapted to VLCD5-VLCD6-XH18 displays."
requires-python = ">=3.7"

dependencies = [
    "pytest",
    "cffi >=1.15.0",
    "setuptools",
    "numpy",
    "hypothesis",
]

[project.urls]
"Homepage" = "https://github.com/emmebrusa/TSDZ2-Smart-EBike-1"

[tool.pyright]
extraPaths = ["tests"]

[tool.pytest.ini_options]
addopts = [
    # "--ignore=tests/example",
]
